--- a/views/register.ejs
+++ b/views/register.ejs
@@ -276,7 +276,7 @@
     
   <div class="col col-lg-12 col-sm-12 col-xs-12" id="part1">
 
-  <h1>What is CodeSteak?</h1>  
+<!--   <h1>What is CodeSteak?</h1>  
 <p id="info">
   <i class="fa fa-chevron-circle-right " aria-hidden="true"></i>
    <strong>CodeSteak is a completely free open-source platform for create as well as deploy countless web projects instantly.</strong>
@@ -292,8 +292,37 @@
 <p id="info">
   <i class="fa fa-chevron-circle-right " aria-hidden="true"></i>
    <strong>Make use of open-social platform to interact with any codeSteak user instantly</strong>
-    </p>
+    </p> -->
     
+    
+    <div style="text-align:center;margin-top:50px">
+       <div class="col col-lg-3 col-xs-12">
+      <i style="font-size:120px;color:white;" class="fa fa-file-code-o" aria-hidden="true"></i>
+    </div>
+    
+    
+    <div class="col col-lg-1 col-xs-12">
+      <i style="font-size:30px;color:white;margin-top:30px;" class="fa fa-long-arrow-right" aria-hidden="true"></i>
+    </div>
+    
+    
+    
+    <div class="col col-lg-4 col-xs-12">
+      <i style="font-size:120px;color:white;" class="fa fa-gear" aria-hidden="true"></i>
+      </div>
+    
+    
+    <div class="col col-lg-1 col-xs-12">
+       <i style="font-size:30px;color:white;margin-top:30px;" class="fa fa-long-arrow-right" aria-hidden="true"></i>
+    </div>
+    
+    
+    
+    <div class="col col-lg-3 col-xs-12">
+      <i style="font-size:120px;color:white;" class="fa fa-paper-plane" aria-hidden="true"></i>
+    </div>
+    </div>
+   
     
     
 </div>
@@ -351,7 +380,7 @@
             <i style="background-color:#2d2d2d;"id="cancel" class="fa fa-times-circle-o" aria-hidden="true"></i>
           </a>
         
-           <form  action = '/register' method = "post" enctype="multipart/form-data">
+           <form  action = '/register' method = "post">
     
   
       <div class="row">
@@ -361,11 +390,7 @@
       <label>Enter your name</label>
        <input id="segment" type = 'text' name = 'username' placeholder = 'Fullname'>
     </div> -->
-         <div class = "col col-lg-12 col-sm-12 col-xs-12">
-      <label>Choose a Image</label>
-        <input type="file" name="ProfileImage"/>
-  
-    </div> 
+    
       
   
         
